--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+arm-trusted-firmware (2.8.0+dfsg-1~0) UNRELEASED; urgency=medium
+
+  * New upstream release.
+  * debian/control: Add openssl to Build-Depends.
+  * debian/rules: Move sun50i_a64 to platforms_nodebug.
+  * debian/patches: Refresh for v2.8.0.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Thu, 24 Nov 2022 20:23:15 -0800
+
 arm-trusted-firmware (2.7.0+dfsg-2) unstable; urgency=medium
 
   * debian/rules: Fix build failure by ignoring warnings for RWX segments.
