--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+arm-trusted-firmware (2.9.0+dfsg-1~0) UNRELEASED; urgency=medium
+
+  [ Manuel Traut ]
+  * Build for i.MX8MM
+
+  [ Vagrant Cascadian ]
+  * debian/copyright: Update for 2.9.0.
+  * debian/control: Update Standards-Version to 4.6.2.
+  * debian/rules: Build sun50i_a64 with debugging enabled again.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Fri, 16 Jun 2023 16:56:30 -0700
+
 arm-trusted-firmware (2.8.0+dfsg-1) unstable; urgency=medium
 
   * New upstream release.
