--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+arm-trusted-firmware (2.9.0+dfsg-3) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Fri, 30 Jun 2023 18:17:00 -0700
+
 arm-trusted-firmware (2.9.0+dfsg-2) experimental; urgency=medium
 
   * debian/rules: Fix variable assignment for sun50i_h6_no_pmic target.
